--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,6 +24,10 @@ dev_dependencies:
   mocktail: ^0.3.0
   very_good_analysis: ^2.4.0
 
+# Essential for version constraint matching; pub get fails otherwise
+dependency_overrides:
+  test_api: ^0.4.9
+
 flutter:
   uses-material-design: true
   generate: true
