--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
       url: https://github.com/Cliabhach/dartdoc.git
       ref: model-element-fixes
   git: 2.0.0
+  mime: ^1.0.2
 
 dev_dependencies:
   coverage: ^1.1.0
