--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,7 @@ dependencies:
     git:
       url: https://github.com/dart-lang/convert.git
       ref: fix-47
-  dartdoc:
-    git:
-      url: https://github.com/Cliabhach/dartdoc.git
-      ref: model-element-fixes
+  dartdoc: 5.1.0
   git: 2.0.0
   mime: ^1.0.2
 
