build: Use a version range for the default convert dependency
Now it's clearer that we accept 3.0.2 or higher, and that
the git reference is just there to request a pre-release
version.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,7 @@ executables:
 
 dependencies:
   analyzer: ^3.4.1
-  convert:
-    git:
-      url: https://github.com/dart-lang/convert.git
-      ref: fix-47
+  convert: '>=3.0.2 <3.2.0'
   dartdoc: 5.1.0
   git: 2.0.0
   mime: ^1.0.2
