--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
   bloc: ^8.0.3
@@ -18,10 +18,11 @@ dependencies:
     path: ../
 
 dev_dependencies:
-  bloc_test: ^9.0.3
-  flutter_test:
-    sdk: flutter
-  mocktail: ^0.3.0
+  bloc_test: ^9.1.0
+  # TODO: Enable once we can fix the dependency tree
+  # flutter_test:
+  #   sdk: flutter
+  # mocktail: ^0.3.0
   very_good_analysis: ^2.4.0
 
 flutter:
