--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # type info....but in practice we can expect more reliable info to come from the host
   # system's mime type database.
   mime: ^1.0.2
+  yaml: ^3.1.1
 
 dev_dependencies:
   coverage: ^1.2.0
